--- a/validators.css
+++ b/validators.css
@@ -35,13 +35,12 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 40%;
-  width: 60%;
+  height: minmax(40%, 400px);
+  width: minmax(60%, 400px);
   border: solid 2px rgb(86, 86, 86);
   border-radius: 15px;
-  background-color: rgb(139, 88, 137);
+  background-color: rgb(159, 194, 128);
   transition: 500ms ease-out;
-  transform: translateX(-200%);
 }
 
 .dialogForm {
@@ -52,8 +51,12 @@ button {
 }
 
 .message {
-  color: rgb(159, 194, 128);
+  color: rgb(139, 88, 137);
   font-size: 2rem;
   font-weight: bold;
   text-align: center;
+}
+
+::backdrop {
+  background: none;
 }
